--- a/src/app/product-details/product-details.component.html
+++ b/src/app/product-details/product-details.component.html
@@ -5,4 +5,6 @@
     <h4 *ngIf="product.description">{{product.description}}</h4>
     <p *ngIf="!product.description">There is no description for this product.</p>
     <p>{{product.price | currency}}</p>
+
+    <button type="button" (click)="addToCart(product)">Buy</button>
 </div>
